examples/fail/S-Rxl.stl
/** Relim **/
global x; 
local l; 

/** Optimised **/ 
read(x,l); 

/** Unoptimised **/ 
